# c-template-project-marija

./: .gitignore  CMakeLists.txt  README.md  environment.yml
.github/workflows/: CI.yml
docs/source/: conf.py  index.rst
include/: some_library.h
src/: CMakeLists.txt  new.c  some_executable.c  some_library.c
src/homework/: CMakeLists.txt  errors.c
src/homework/lesson10/: CMakeLists.txt  README.md
src/homework/lesson10/include/: super_assert.h  welcome.h
src/homework/lesson10/src/: main.c  super_assert_demo.c  welcome.c
src/homework/lesson10/tests/: test_welcome.c
src/homework/lesson11/advanced_logger/: CMakeLists.txt
src/homework/lesson11/advanced_logger/include/: advanced_logger.h
src/homework/lesson11/advanced_logger/src/: advanced_logger.c  main.c
src/homework/lesson11/custom_logging/: CMakeLists.txt
src/homework/lesson11/custom_logging/include/: logger.h
src/homework/lesson11/custom_logging/src/: logger.c  main.c
src/homework/lesson11/error_handeling/: CMakeLists.txt
src/homework/lesson11/error_handeling/include/: error.h
src/homework/lesson11/error_handeling/src/: error.c  main.c
src/homework/lesson12/negative_integers/: CMakeLists.txt
src/homework/lesson12/negative_integers/include/: bits.h
src/homework/lesson12/negative_integers/src/: bits.c  main.c
src/homework/lesson12/netf_macro/: CMakeLists.txt
src/homework/lesson12/netf_macro/src/: main.c
src/homework/lesson12/print_any_bits/: CMakeLists.txt
src/homework/lesson12/print_any_bits/include/: bits.h
src/homework/lesson12/print_any_bits/src/: bits.c  main.c
src/homework/lesson12/print_bits/: CMakeLists.txt
src/homework/lesson12/print_bits/src/: main.c
src/homework/lesson4/include/: name_length.h
src/homework/lesson4/src/: CMakeLists.txt  name_length.c
src/homework/lesson4/tests/: CMakeLists.txt  test_name_length.c
src/homework/lesson5_6_7/: casting1.c  casting2.c  injection.c  malloc_fun.c  milestone2.c  milestone3.c  milestone4.c  pointers.c  str_concat.c
src/homework/lesson5_6_7/big_boy_malloc/: CMakeLists.txt  myenv.yml
src/homework/lesson5_6_7/big_boy_malloc/include/: library.h
src/homework/lesson5_6_7/big_boy_malloc/src/: library.c  main.c
src/homework/lesson5_6_7/big_boy_malloc/tests/: sum_test.c
src/homework/lesson5_6_7/exercise_5_1/: CMakeLists.txt
src/homework/lesson5_6_7/exercise_5_1/include/: rectangle.h
src/homework/lesson5_6_7/exercise_5_1/src/: main.c  rectangle.c
src/homework/lesson5_6_7/exercise_5_1/tests/: test_rectangle.c
src/homework/lesson8/: CMakeLists.txt  pg2701.txt
src/homework/lesson8/include/: zipf.h
src/homework/lesson8/src/: count.c  main.c  read.c
src/lesson4/: CMakeLists.txt
src/lesson4/src/: main.c
src/lesson4/tests/: utest_main.c
src/lessons/: CMakeLists.txt
src/lessons/1-introduction/: 1-hello.c  2-const.c  3-order.c  CMakeLists.txt
src/lessons/3-error-handling/: 1-assert.c  10-design.c  2-static-assert.c  3-return-codes.c  4-return-codes2.c  5-return-codes3.c  6-errno.c  7-termination.c  8-exit-hooks.c  9-function-arguments.c  CMakeLists.txt
src/lessons/4-unit-testing/: 1-first-unit-test.c  CMakeLists.txt
tests/: CMakeLists.txt  test_some_library.c
