
add_executable(1-assert 1-assert.c)
add_executable(2-static-assert 2-static-assert.c)
add_executable(3-return-codes 3-return-codes.c)
add_executable(4-return-codes2 4-return-codes2.c)
add_executable(5-return-codes3 5-return-codes3.c)
add_executable(6-errno 6-errno.c)
add_executable(7-termination 7-termination.c)
add_executable(8-exit-hooks 8-exit-hooks.c)
add_executable(9-function-arguments 9-function-arguments.c)
add_executable(10-design 10-design.c)